# metadata-transpiler-service

./: .pre-commit-config.yaml  .pylintrc  .static_files_ignore  Dockerfile  README.md  config_schema.json  example_config.yaml  openapi.yaml  requirements-dev.txt  setup.cfg  template_upgrade.sh
.devcontainer/: .dev_config.yaml  Dockerfile  dev_install  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: dev_cd.yaml
data/: mapping.json
metadata_transpiler_service/: __init__.py  __main__.py  config.py  creation_models.py  mapping.py  models.py
metadata_transpiler_service/api/: main.py
metadata_transpiler_service/core/: convert.py  infer.py  schema.py  utils.py
metadata_transpiler_service/dao/: __init__.py  db_models.py  utils.py
metadata_transpiler_service/pubsub/: __init__.py  main.py
scripts/: openapi_from_app.py  update_config_docs.py  update_openapi_docs.py
scripts/script_utils/: fastapi_app_location.py
tests/fixtures/: __init__.py
tests/integration/: test_api.py  test_convert.py
