# Copyright 2021 - 2023 Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = metadata_transpiler_service
version = attr: metadata_transpiler_service.__version__
description = Metadata Transpiler Service
url = https://github.com/ghga-de/metadata-transpiler-service
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ghga-service-chassis-lib[api]==0.17.0
    PyYAML==6.0
    stringcase==1.2.0
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    metadata-transpiler-service = metadata_transpiler_service.__main__:run

[options.extras_require]
dev =
    ghga-service-chassis-lib[dev]==0.17.0
    typer
    python-multipart
    xlrd >= 0.9.0
    openpyxl
    pandas==1.4.2
    nest-asyncio

all =
    %(dev)s


[options.packages.find]
exclude = tests
